static/styles.css
/* Common styles across all pages */

/* Font for body */
body 
{   
    display: flex;
    flex-direction: column;
    height: 100vh;
    margin: 0;
    font-family: "Inter";
    /* background-color: #121212;#3f3f3f #111111*/
    background: linear-gradient(90deg,#5c5c5c,#111111);
    overflow: hidden;
}

nav
{
    height: 70px;
    background-color: #262626;
    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.5);
}

main
{
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* Size for brand */
nav .navbar-brand
{
    font-size: 26px;
    font-family: "Outfit";
    margin-left: 15px;
}

/* Colors for brand */
nav .navbar-brand .brand-style
{
    color: white;
    font-weight: 600;
    margin-left: 8px;
    letter-spacing: 7px;
}

/* Adjusts the position of the brand logo */
nav .logo-alignment
{
    margin-top: -6px;
}

/* Adjust position of nav-link to be vertically centered in the nav bar */

nav .nav-link
{
    margin-top: -10px;
    color: white;
}
nav .nav-link:hover
{
    color: #3FD4C1;
}

/* btn stylings */

main .form-control
{
    background-color: rgba(0, 0, 0, 0);
    border: 1px solid rgb(148, 148, 148);
    padding: 8px 12px 10px 8px;
    color: white;
}
main .form-control:focus
{
    background-color: #262626;
    border: 1px solid white;
    color: white;
}

main .btn.btn-primary
{
    background-color: #262626;
}
main .btn.btn-primary:hover
{
    background-color: #1d897b;
}

/* Commmon authentication styles */

main .authentication-container
{
    background-color: #1a1a1a;
    border-radius: 10px;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
}
main .authentication-header
{
    text-align: center;
    background-color: #1d897b;
    font-size: 25px;
    font-weight: 600;
    border-radius: 10px 10px 0 0;
    color: white;
    padding: 15px 0 15px 0;
    
}
main .authentication-content
{
    padding: 40px;
}

/* General text styling */
main .text
{
    color: rgb(165, 165, 165);
}

.bottom-text
{
    text-align: center;
}

.highlight-link
{
    color: #1d897b;
    cursor: pointer;
    text-decoration: none;
}
.highlight-link:hover 
{
    color: white;
}

/* Styling for flash notifications */
#flashes {
    position: fixed;
    top:0;
    left: 50%;
    color: white;
    transform: translate(-50%);
    z-index: 1000;
    width: 100vw;
}
.flash {
    padding: 5px;
    opacity: 1;
    transition: opacity 0.6s;
    text-align: center;
  }
.flash-success {
    background-color: #1d897b;
}
.flash-error {
    background-color: #e74c3c;
}

/* Background animation */
.slider-thumb::before {
  position: absolute;
  content: "";
  left: 40%;
  top: 15%;
  width: 1550px;
  height: 1550px;
  opacity: 0.7;
  background: rgb(29, 29, 29);
  border: 15px solid #1d897b;
  border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
  will-change: border-radius, transform, opacity;
  animation: sliderShape 20s linear infinite;
  display: block;
  z-index: -1;
  -webkit-animation: sliderShape 20s linear infinite;
}
@keyframes sliderShape{
  0%,100%{
  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
    transform: translate3d(0,0,0) rotateZ(0.01deg);
  }
  34%{
      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
  }
  50%{
    transform: translate3d(0,0,0) rotateZ(0.01deg);
  }
  67%{
    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
  }
}
.slider-thumb::after {
    position: absolute;
    content: "";
    right: 70%;
    bottom: 25%;
    width: 1550px;
    height: 1550px;
    opacity: 0.7; 
    background: rgb(29, 29, 29);
    border: 15px solid #1d897b;
    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
    will-change: border-radius, transform, opacity;
    animation: sliderShape2 20s linear infinite;
    display: block;
    z-index: -1;
    -webkit-animation: sliderShape2 20s linear infinite;
  }
  
  @keyframes sliderShape2 {
    0%,100%{
      border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
      transform: translate3d(0,0,0) rotateZ(0.01deg);
    }
    34%{
      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
      transform:  translate3d(0,5px,0) rotateZ(0.01deg);
    }
    50%{
      transform: translate3d(0,0,0) rotateZ(0.01deg);
    }
    67%{
      border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
      transform: translate3d(0,-3px,0) rotateZ(0.01deg);
    }
  }

